--- a/cards.css
+++ b/cards.css
@@ -6,18 +6,27 @@ html {
     background-color: #FFFFFF;
 }
 
-.icon {color: #BCD2DA;}
+.icon {color: #BCD2DA; display: flex; flex-direction: column; align-items: center;}
 
 .card {
     /* display, flex-direction */
     border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 33%;
+    height: 200px;
 }
 
 .card__description {
     /* display, flex-direction, justify-content, align-items */
     padding: 15px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh
 }
 
 .card__descriptionIcon {font-size: 32px; margin-bottom: 10px;}
@@ -27,16 +36,25 @@ html {
     font-size: 12px;
     text-align: center;
     max-width: calc(100% - 30px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card__price {
-    text-align: center;
+   
     color: #57727C;
     font-size: 12px;
     font-weight: 700;
     padding: 5px 15px;
     border-top: 1px solid #D7DBDD;
     background-color: #EEF3F5;
+    display: flex;
+    flex-direction: column;
+    height: 15vh;
+    width: 100%;
+    align-items: center;
+    
 }
 
 .cardGroup {
@@ -45,6 +63,7 @@ html {
     border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
+    display: flex;
   }
   
     .cardGroup__card {
@@ -52,6 +71,10 @@ html {
   
       border: none;
       border-radius: 0;
+      display: flex;
+      flex-basis: 100%;
+      flex-direction: column;
+      justify-content: center;
     }
   
     .cardGroup__card {
